# bfplan

./: Cargo.toml  README.md  algorytm.md  benchmark.sh  output.json  test.json  test2.json
dokumentacja/: build.sh  sprawozdanie.md  wielokrotne_uruchomienie.txt
projekt-zespolowy/: README.md
src/: illegal_state.rs  input.rs  main.rs  output.rs
src/annealing/: adapter.rs  annealing_buffer.rs  annealing_functions.rs  annealing_state.rs  energy.rs  illegal_buffer.rs  inner_state.rs  mod.rs  mutation.rs
src/data_types/: classroom.rs  lesson.rs  mod.rs  simple_date.rs  student_group.rs  subject.rs  teacher.rs
